최종 통합 코드